# nexa_http

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT-MAP.md  CONTEXT.md  Cargo.toml  README.md  README.zh-CN.md  pubspec.yaml  skills-lock.json
.trellis/: .template-hashes.json  config.yaml  workflow.md
docs/: architecture.md  runtime-release-contract.md  verification-playbook.md
fixture_server/: docker-compose.yml  http_fixture_server.dart  proxy_smoke_test.sh
native/nexa_http_native_core/: Cargo.toml
native/nexa_http_native_core/include/: nexa_http_native.h
native/nexa_http_native_core/src/: lib.rs
native/nexa_http_native_core/src/api/: error.rs  ffi.rs  ffi_decode.rs  ffi_exports.rs  ffi_result.rs  ffi_types.rs  request.rs  response.rs
native/nexa_http_native_core/src/platform/: capabilities.rs  mod.rs  proxy.rs  proxy_normalization.rs  source.rs
native/nexa_http_native_core/src/runtime/: client_registry.rs  executor.rs  inflight.rs  managed_proxy_state.rs  request_execution.rs  tokio_runtime.rs
native/nexa_http_native_core/src/runtime/executor/: tests.rs
native/nexa_http_native_core/tests/: managed_proxy_state.rs  proxy_normalization.rs  proxy_runtime.rs  runtime_module_boundaries.rs  runtime_smoke.rs
native/nexa_http_native_core/tests/fixtures/: proxy_normalization_cases.rs
scripts/: build_native_all.sh  build_native_android.sh  build_native_common.sh  build_native_ios.sh  build_native_linux.sh  build_native_macos.sh  build_native_windows.sh  generate_native_asset_manifest.dart  materialize_distribution.dart  native_abi_contract.dart  (+10 more)
(+442 files in other folders)
